--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "ignore": ["node_modules", "build/**","public/**","views/**"],
-  "presets": [ "react-app", "es2015", "stage-2"],
+  "presets": [ "react-app" ],
   "plugins": ["add-module-exports"],
   "comments": false,
   "compact": true
