--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pug": "^2.0.0-rc.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-helmet": "^5.0.3",
     "react-redux": "^5.0.4",
     "react-router": "3",
     "react-router-dom": "^4.1.1",
