--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "babel-register": "^6.24.1",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^7.0.1",
     "express": "^4.15.2",
     "ignore-styles": "^5.0.1",
     "morgan": "^1.8.1",
